update to skills

--- a/Yann_LeCostaouec_resume.tex
+++ b/Yann_LeCostaouec_resume.tex
@@ -152,11 +152,11 @@
 
 \cvtag{Java/Spring}
 \cvtag{C/C++}
-\cvtag{Python}\\
-\cvtag{Ruby/Rails}
+\cvtag{Python}
+\cvtag{Ruby/Rails}\\
 \cvtag{SQL}
 \cvtag{AWS}
-\cvtag{Javascript}
+\cvtag{Javascript/Typescript}
 \cvtag{ReactJS}
 \cvtag{NodeJS}
 \cvtag{ExpressJS}
