rewording and rewording skills

--- a/Yann_LeCostaouec_resume.tex
+++ b/Yann_LeCostaouec_resume.tex
@@ -150,29 +150,27 @@
 
 \cvsection{Skills}
 
-\cvtag{Java/Spring}
 \cvtag{C/C++}
-\cvtag{Python}
-\cvtag{Ruby/Rails}\\
-\cvtag{SQL}
-\cvtag{AWS}
+\cvtag{Java/Spring}
+\cvtag{Python}\\
+\cvtag{Ruby/Rails}
+\cvtag{SQL/NOSQL}
+\cvtag{AWS}\\
 \cvtag{Javascript/Typescript}
 \cvtag{ReactJS}
 \cvtag{NodeJS}
 \cvtag{ExpressJS}
-\cvtag{NestJS}
-\cvtag{MongoDB}
 \cvtag{PHP}
-\cvtag{HTML/CSS}
+\cvtag{HTML/CSS}\\
 \cvtag{Git}
 \cvtag{Rally}
 \cvtag{Jira}
+\cvtag{TDD/BDD}
 
 \divider\smallskip
 
 \cvtag{Leadership}
 \cvtag{Communication}
-\cvtag{TDD/BDD}
 
 \cvsection{Languages}
 
