small capitalization change

--- a/Yann_LeCostaouec_resume.tex
+++ b/Yann_LeCostaouec_resume.tex
@@ -154,7 +154,7 @@
 \cvtag{Java/Spring}
 \cvtag{Python}\\
 \cvtag{Ruby/Rails}
-\cvtag{SQL/NOSQL}
+\cvtag{SQL/NoSQL}
 \cvtag{AWS}\\
 \cvtag{Javascript/Typescript}
 \cvtag{ReactJS}
