adding linux and shell scripting

--- a/Yann_LeCostaouec_resume.tex
+++ b/Yann_LeCostaouec_resume.tex
@@ -60,7 +60,7 @@
   \location{Nashua, NH}
   \homepage{strongrib.com}
   \linkedin{ylecost}
-  \github{ylecost} 
+  \github{ylecost}
 }
 
 \makecvheader
@@ -107,7 +107,7 @@
 
 \begin{itemize}
 \item Developed time-saving automated image QA system in Java and Javascript
-\item Wrote Python backend process monitor
+\item Wrote Python process monitor for image processing system.
 \item Created Oracle SQL reporting tool for European Space Agency
 \end{itemize}
 
@@ -119,11 +119,20 @@
 \item Provided stellar technical leadership and strategic vision for high-speed printer image processing system written in C
 \item Optimized algorithm for image rotation, scaling, clipping, and half-toning
 \item Parallelized color interpolation on a GPU with OpenCL
+\item Developed compressors and decompressors for LZW, PackBits, JPEG
 \end{itemize}
 
 \newpage
 
 \switchcolumn
+
+\cvsection{Education}
+
+\cvevent{M.S.\ in Math and Computer Sciences}{Colorado School of Mines}{2007 - 2009}{Golden, CO}
+
+\divider
+
+\cvevent{B.A.\ in Liberal Studies}{Magdalen College}{2002 - 2006}{Warner, NH}
 
 \cvsection{Certifications}
 
@@ -152,18 +161,22 @@
 
 \cvtag{C/C++}
 \cvtag{Java/Spring}
-\cvtag{Python}\\
-\cvtag{Ruby/Rails}
-\cvtag{SQL/NoSQL}
-\cvtag{AWS}\\
+\cvtag{Ruby/Rails}\\
+\cvtag{AWS}
+\cvtag{MATLAB}
+\cvtag{OpenCV}
+\cvtag{OpenCL}\\
 \cvtag{Javascript/Typescript}
+\cvtag{PHP}
+\cvtag{Git}\\
 \cvtag{ReactJS}
 \cvtag{NodeJS}
-\cvtag{ExpressJS}
-\cvtag{PHP}
-\cvtag{HTML/CSS}\\
-\cvtag{Git}
-\cvtag{Rally}
+\cvtag{ExpressJS}\\
+\cvtag{Python}
+\cvtag{HTML/CSS}
+\cvtag{SQL/NOSQL}\\
+\cvtag{Linux}
+\cvtag{Shell scripting}
 \cvtag{Jira}
 \cvtag{TDD/BDD}
 
@@ -179,14 +192,6 @@
 
 \cvskill{French}{4}
 % \divider
-
-\cvsection{Education}
-
-\cvevent{M.S.\ in Math and Computer Sciences}{Colorado School of Mines}{2007 - 2009}{Golden, CO}
-
-\divider
-
-\cvevent{B.A.\ in Liberal Studies}{Magdalen College}{2002 - 2006}{Warner, NH}
 
 \end{paracol}
 
